@@ -761,6 +761,9 @@ t + 75/19, t^6 + t^3 + 1), Mod(-27/19*t^5 + 73/19*t^4 + 101/19*t^3 - 39/19*t
  + 148/19*t^3 - 69/19*t^2 - 261/19*t + 104/19, t^6 + t^3 + 1), Mod(13/19*t^5
  - 7/19*t^4 - 157/19*t^3 + 251/19*t^2 + 11/19*t + 16/19, t^6 + t^3 + 1)]
 [0, -8, 0, 0, 448, -960, 0, 0, 1920, -72, 0, 0, -11520, 10560, 0, 0]
+[0]
+[1, 2, 0, 0, 242, 480, 0, 0, 2640, 4322, 0, 0, 11040, 13920, 0, 0]
+[1]
 [0, -1, 24, -252, 1472, -4830, 6048, 16744, -84480, 113643, 115920]
 [[1, 1], 0.16568457302248264542066459293908431501]
 [y, y^2 + Mod(-t, t^2 + 1)*y + 32]
@@ -1620,4 +1623,4 @@ od(0, t^16 + 1), Mod(3/8*t^11, t^16 + 1), Mod(0, t^16 + 1)]
   ***   at top-level: ...,0);[F]=mfeigenbasis(mf);mfpow(F,3)
   ***                                             ^----------
   *** mfpow: sorry, changing cyclotomic fields in mf is not yet implemented.
-Total time spent: 15906
+Total time spent: 16162
