@@ -91,6 +91,7 @@ BA  69- [pthread] Fix potential crashes when cancelling threads.
 NM  71- nfisincl(x^2-2^5,nfinit(x^4-2)) -> wrong result [#2213, #2214]
     72- nfeltsign: wrong results for non-primitive elements in presence of
         ramification at infinity [#2217]
+HC  73- F=mfbracket(mfbd(mfEk(4),4),mfTheta(),1); mfcoefs(F,0) -> SEGV
 
   Changed
      1- [libpari] rename rootsof1 -> nfrootsof1
